--- a/partials/items-table.html
+++ b/partials/items-table.html
@@ -1,4 +1,5 @@
 <div ng-controller="ItemsController">
+  <!-- Items search and filter controls -->
   <div class="row">
     <div class="col-sm-12">
       <div class="row">
@@ -18,6 +19,34 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+  <!-- Items Table -->
+  <div class="row">
+    <div class="col-sm-12">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <td>Tea</td>
+            <td>Information</td>
+            <td>Sort by</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="item in vm.items">
+            <td>
+              <img alt="" ng-src="{{item.imageUrl}}" />
+            </td>
+            <td>
+              {{ item.name }}
+              {{ item.ingredients }}
+            </td>
+            <td>
+              <button class="btn btn-primary" ng-click="addToCart()">Add to Cart</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
