added cart page

--- a/partials/items-table.html
+++ b/partials/items-table.html
@@ -19,7 +19,7 @@
           </div>
         </div>
         <div class="col-sm-4">
-          <button class="btn btn-success pull-right" ng-href="/cart">Checkout: {{ vm.cartTotal() }}</button>
+          <a class="btn btn-success pull-right" ng-href="/#/cart">Checkout: {{ vm.cartTotal() }}</a>
         </div>
       </div>
     </div>
