--- a/partials/items-table.html
+++ b/partials/items-table.html
@@ -20,7 +20,7 @@
           </div>
         </div>
         <div class="col-sm-4">
-          <a class="btn btn-success pull-right" ng-href="/#/cart">Checkout: {{ vm.cartTotal() }}</a>
+          <!-- <a class="btn btn-success pull-right" ng-href="/#/cart">Checkout: {{ vm.cartTotal() }}</a> -->
         </div>
       </div>
     </div>
@@ -54,7 +54,7 @@
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
-                <option value="4">4</option>
+                <option value="4" selected>4</option>
                 <option value="5">5</option>
               </select>
               <button class="btn btn-primary" ng-click="vm.addToCart(item, item.quantity)">Add to Cart</button>
