--- a/partials/items-table.html
+++ b/partials/items-table.html
@@ -63,7 +63,7 @@
                 <option value="4">4</option>
                 <option value="5">5</option>
               </select>
-              <button class="btn btn-primary" ng-click="vm.addToCart(item, item.quantity)">Add to Cart</button>
+              <button class="btn btn-info btn-raised" ng-click="vm.addToCart(item, item.quantity)">Add to Cart</button>
             </td>
           </tr>
         </tbody>
