--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,15 @@
-
+body {
+  background: #FFF;
+}
 .ngTea-navbar {
   padding-right: 15px;
+}
+
+.ngTea--table {
+  border: 1px solid #ccc;
+  padding-top:16px;
+}
+
+label.ngTea--label {
+  padding: 8px 0 0 0;
 }
