--- a/partials/items-table.html
+++ b/partials/items-table.html
@@ -69,6 +69,7 @@
                     </div>
                     <div class="col-sm-8">
                       <select class="form-control" name="quantity" id="quantity" ng-model="item.quantity">
+                        <option value="0"></option>
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
